@@ -1,3 +1,4 @@
+      - Handle undef with grace (github issues 13 and 14)
       - Restrict ConsumerOf and HashMethods to something blessed (i.e. an instance)
       - Bump Moo requirements (better role composition and isa builder check) 
 
